finish change password endpoint
