# apps/server/openapi.yaml
@@ -80,6 +80,8 @@ paths:
       responses:
         '200':
           description: OK
+        '400':
+          description: BAD_REQUEST
         '401':
           description: UNAUTHORISED
   /api/v1/auth/refresh:
@@ -1051,7 +1053,7 @@ components:
       properties:
         email:
           type: string
-          pattern:
+          format: email
           example: first.last@example.com
         password:
           type: string
@@ -1065,6 +1067,10 @@ components:
           type: string
         newPassword:
           type: string
+        twoFACode:
+          type: string
+          pattern: '^\d{6}$'
+          example: '123456'
     LoginSuccessWithJWT:
       type: object
       required:
